--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-git com<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -94,7 +94,7 @@ git com<!DOCTYPE html>
         </div>
 
         <div class="col-md-6 intro-img order-md-last order-first" data-aos="zoom-out" data-aos-delay="200">
-          <img src="assets/img/intro-img.svg" alt="" class="img-fluid">
+          <img src="assets/img/cyber.gif" alt="" class="img-fluid">
         </div>
       </div>
 
@@ -103,45 +103,15 @@ git com<!DOCTYPE html>
 
   <main id="main">
 
-    <!-- ======= About Section ======= -->
-    <section id="about" class="about">
-
-      <div class="container" data-aos="fade-up">
-        <div class="row">
-
-          
-
-          <div class="col-lg-7 col-md-6">
-            <div class="about-content" data-aos="fade-left" data-aos-delay="100">
-              <h2>About Us</h2>
-              <h5>Botnet Security is a Crowd Community ~ India's Best Cyber Security Community. Our aim to provide the right resources to everyone and educate them.
-                We are hackers with good mind and focuse to educate people how to serve internet safely 
-                Our Experts will teach you how to break and secure the Digital World.</h5>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <ul>
-                <li><i class="ion-android-checkmark-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                <li><i class="ion-android-checkmark-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                <li><i class="ion-android-checkmark-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-lg-5 col-md-6">
-            <div class="about-img" data-aos="fade-right" data-aos-delay="100">
-              <img src="assets/img/banner.jpg" alt="">
-            </div>
-          </div>
-        </div>
-      </div>
-
-    </section><!-- End About Section -->
+   
 
     <!-- ======= Services Section ======= -->
     <section id="services" class="services section-bg">
       <div class="container" data-aos="fade-up">
 
         <header class="section-header">
-          <h3>Services</h3>
-          <p>Laudem latine persequeris id sed, ex fabulas delectus quo. No vel partiendo abhorreant vituperatoribus.</p>
+          <h3>What we offer</h3>
+          <p>Our expert will help you to grow and make best career.</p>
         </header>
 
         <div class="row">
@@ -195,6 +165,38 @@ git com<!DOCTYPE html>
 
       </div>
     </section><!-- End Services Section -->
+
+     <!-- ======= About Section ======= -->
+     <section id="about" class="about">
+
+      <div class="container" data-aos="fade-up">
+        <div class="row">
+
+          
+
+          <div class="col-lg-7 col-md-6">
+            <div class="about-content" data-aos="fade-left" data-aos-delay="100">
+              <h2>About Us</h2>
+              <h5>Botnet Security is a Crowd Community ~ India's Best Cyber Security Community. Our aim to provide the right resources to everyone and educate them.
+                We are hackers with good mind and focuse to educate people how to serve internet safely 
+                Our Experts will teach you how to break and secure the Digital World.</h5>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <ul>
+                <li><i class="ion-android-checkmark-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+                <li><i class="ion-android-checkmark-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
+                <li><i class="ion-android-checkmark-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-5 col-md-6">
+            <div class="about-img" data-aos="fade-right" data-aos-delay="100">
+              <img src="assets/img/banner.jpg" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </section><!-- End About Section -->
 
     <!-- ======= Why Us Section ======= -->
     <section id="why-us" class="why-us">
