--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </div>
 
         <div class="col-md-6 intro-img order-md-last order-first" data-aos="zoom-out" data-aos-delay="200">
-          <img src="assets/img/ezgif.com-gif-to-webp.webp" alt="" class="img-fluid">
+          <img src="assets/img/ezgif.com-gif-to-webp.gif" alt="" class="img-fluid">
         </div>
       </div>
 
