--- a/index.html
+++ b/index.html
@@ -795,20 +795,10 @@
       <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
 
         <!-- Links -->
-        <h5 class="text-uppercase font-weight-bold">Products</h5>
+        <h5 class="text-uppercase font-weight-bold">Open Hours</h5>
         <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-        <p>
-          <a href="#!">Test1</a>
-        </p>
-        <p>
-          <a href="#!">Test2</a>
-        </p>
-        <p>
-          <a href="#!">Test3</a>
-        </p>
-        <p>
-          <a href="#!">Test4</a>
-        </p>
+        <li>Monday-Friday: <span>10am to 7pm</span></li>
+        <li>Saturday & Sunday: <span>Closed</span></li>
 
       </div>
       <!-- Grid column -->
