adding python course

--- a/index.html
+++ b/index.html
@@ -82,7 +82,6 @@
           <li><a href="#footer">Contact Us</a></li>
         </ul>
       </nav><!-- .main-nav-->
-
     </div>
   </header><!-- End Header -->
 
@@ -126,16 +125,13 @@
         <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="0.1s">
           <div class="member">
             
-            <a href="#"><img src="assets/img/team-1.jpg"  class="img-fluid" alt=""></a>
+            <a href="#"><img src="assets/img/Pyth.png"  class="img-fluid" alt=""></a>
             <div class="member-info">
               <div class="member-info-content">
                 <h4>Programming Language</h4>
-                <span>Chief Executive Officer</span>
-                <div class="social">
-                  <a href=""><i class="fa fa-twitter"></i></a>
-                  <a href=""><i class="fa fa-facebook"></i></a>
-                  <a href=""><i class="fa fa-google-plus"></i></a>
-                  <a href=""><i class="fa fa-linkedin"></i></a>
+                <span>Complete 2020 Python Bootcamp</span>
+                <div class="price">
+                  <p>Price <del>&#x20b9; 9500/-</del><b>&#x20b9;9500/-</b></p>
                 </div>
               </div>
             </div>
