deleting waste img

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
         <div class="col-md-6 intro-img order-md-last order-first" data-aos="zoom-out" data-aos-delay="200">
           <br><br>
-          <img src="assets/img/ezgif.com-gif-to-webp.gif" alt="" class="img-fluid">
+          <img src="assets/img/cyber.gif" alt="" class="img-fluid">
           <br><br>
         </div>
       </div>
@@ -210,7 +210,7 @@
         <div class="col-md-4">
           <div class="box">
             <div class="icon" style="background-color: #dc1b4b;"><i class="iconify" data-icon="carbon-education" style="color: white;"></i></div>
-            <h4 class="title" ><a href="" >Online Training </a> </h4>
+            <h4 class="title" ><a href="" >Training </a> </h4>
             <p></p>
           </div>
         </div>
