--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
         <div class="col-md-6 intro-img order-md-last order-first" data-aos="zoom-out" data-aos-delay="200">
           <br><br>
-          <img src="assets/img/cyber.gif" alt="" class="img-fluid">
+          <img src="https://i.pinimg.com/originals/6e/36/41/6e3641df4d4ff70e70554064ff9739a3.gif" alt="" class="img-fluid">
           <br><br>
         </div>
       </div>
