--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
         <div class="col-md-6 intro-img order-md-last order-first" data-aos="zoom-out" data-aos-delay="200">
           
-          <img src="/assets/img/cyber-security-2.gif" alt="" width="400" height="400" style="vertical-align:middle;margin:50px 50px"  class="img-fluid">
+          <img src="/assets/img/cyber-security-2.gif" alt="cyber security" width="400" height="400" style="vertical-align:middle;margin:50px 50px"  class="img-fluid">
           
         </div>
       </div>
