--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
         <div class="col-md-6 intro-img order-md-last order-first" data-aos="zoom-out" data-aos-delay="200">
           
-          <img src="/assets/img/cyber-security-2.gif" alt="cyber security"  class="img-fluid">
+          <img src="/assets/img/intro-img.svg" alt="cyber security"  class="img-fluid">
           
         </div>
       </div>
