--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <div class="container" data-aos="fade-up">
       <div class="section-header">
         <h3>Popular Courses</h3>
-        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+        <p>Best Highly Rated<b> 2020 </b> Courses. </p>
       </div>
 
       <div class="row">
@@ -116,7 +116,7 @@
             <div class="member-info">
               <div class="member-info-content">
                 <h4>Programming Language</h4>
-                <span>Complete 2020 Python Bootcamp</span>
+                <span>Complete 2020 Python Bootcamp</span>>
                 <div class="price">
                   <p>Price <del>&#x20b9; 9500/-</del><b>&#x20b9;9500/-</b></p>
                 </div>
@@ -127,16 +127,13 @@
 
         <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="200">
           <div class="member">
-            <img src="assets/img/team-2.jpg" class="img-fluid" alt="">
+            <img src="assets/img/NETWORKING.png" class="img-fluid" alt="">
             <div class="member-info">
               <div class="member-info-content">
-                <h4>Newtorking </h4>
-                <span>Product Manager</span>
-                <div class="social">
-                  <a href=""><i class="fa fa-twitter"></i></a>
-                  <a href=""><i class="fa fa-facebook"></i></a>
-                  <a href=""><i class="fa fa-google-plus"></i></a>
-                  <a href=""><i class="fa fa-linkedin"></i></a>
+                <h4>Networking</h4>
+                <span>Complete Networking for beginners</span>
+                <div class="price">
+                  <p>Price <del>&#x20b9; 9500/-</del><b>&#x20b9;9500/-</b></p>
                 </div>
               </div>
             </div>
@@ -145,16 +142,13 @@
 
         <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="300">
           <div class="member">
-            <img src="assets/img/team-3.jpg" class="img-fluid" alt="">
+            <img src="assets/img/ethical-hacking.png" class="img-fluid" alt="">
             <div class="member-info">
               <div class="member-info-content">
-                <h4>Hacking</h4>
-                <span>CTO</span>
-                <div class="social">
-                  <a href=""><i class="fa fa-twitter"></i></a>
-                  <a href=""><i class="fa fa-facebook"></i></a>
-                  <a href=""><i class="fa fa-google-plus"></i></a>
-                  <a href=""><i class="fa fa-linkedin"></i></a>
+                <h4>Cyber Security</h4>
+                <span>Complete Ethical Hacking Bootcamp</span>
+                <div class="price">
+                  <p>Price <del>&#x20b9; 9500/-</del><b>&#x20b9;9500/-</b></p>
                 </div>
               </div>
             </div>
@@ -163,16 +157,13 @@
 
         <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="400">
           <div class="member">
-            <img src="assets/img/team-4.jpg" class="img-fluid" alt="">
+            <img src="assets/img/web-developmeny.png" class="img-fluid" alt="">
             <div class="member-info">
               <div class="member-info-content">
-                <h4>Python</h4>
-                <span>Accountant</span>
-                <div class="social">
-                  <a href=""><i class="fa fa-twitter"></i></a>
-                  <a href=""><i class="fa fa-facebook"></i></a>
-                  <a href=""><i class="fa fa-google-plus"></i></a>
-                  <a href=""><i class="fa fa-linkedin"></i></a>
+                <h4>Web Development</h4>
+                <span>Full Stack Web Development</span>
+                <div class="price">
+                  <p>Price <del>&#x20b9; 9500/-</del><b>&#x20b9;9500/-</b></p>
                 </div>
               </div>
             </div>
@@ -550,9 +541,9 @@
         </header>
 
         <div class="owl-carousel clients-carousel">
-          <img src="assets/img/clients/client-1.png" alt="">
-          <img src="assets/img/clients/client-2.png" alt="">
-          <img src="assets/img/clients/client-3.png" alt="">
+          <img src="assets/img/clients/GHS-logo-.png" alt="" style="width: 100px;">
+          <img src="assets/img/clients/ec-council.png" alt="" style="width: 90px;">
+          <img src="assets/img/clients/LogoAC.png" alt="" style="margin-top: 25px;">
           <img src="assets/img/clients/client-4.png" alt="">
           <img src="assets/img/clients/client-5.png" alt="">
           <img src="assets/img/clients/client-6.png" alt="">
