--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <div class="container d-flex h-100">
       <div class="row justify-content-center align-self-center" data-aos="fade-up">
         <div class="col-md-6 intro-info order-md-first order-last" data-aos="zoom-in" data-aos-delay="100">
-          <h2>Botnet Security<br><span>Academy</span><br><div class="last-line">Helping you to find best IT Training for your career</div></h2>
+          <h2>Botnet Security<br><span>Academies</span><br><div class="last-line">Helping you to find best IT Training for your career</div></h2>
           <div>
             <a href="#courses" class="btn-get-started scrollto">Explore Courses</a>
            
