--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <div class="member-info">
               <div class="member-info-content">
                 <h4>Programming Language</h4>
-                <span>Complete 2020 Python Bootcamp</span>>
+                <span>Complete 2020 Python Bootcamp</span><br>
                 <div class="price">
                   <p>Price <del>&#x20b9; 9500/-</del><b>&#x20b9;9500/-</b></p>
                 </div>
@@ -131,7 +131,7 @@
             <div class="member-info">
               <div class="member-info-content">
                 <h4>Networking</h4>
-                <span>Complete Networking for beginners</span>
+                <span>Complete Networking for beginners</span><br>
                 <div class="price">
                   <p>Price <del>&#x20b9; 9500/-</del><b>&#x20b9;9500/-</b></p>
                 </div>
@@ -146,7 +146,7 @@
             <div class="member-info">
               <div class="member-info-content">
                 <h4>Cyber Security</h4>
-                <span>Complete Ethical Hacking Bootcamp</span>
+                <span>Complete Ethical Hacking Bootcamp</span><br>
                 <div class="price">
                   <p>Price <del>&#x20b9; 9500/-</del><b>&#x20b9;9500/-</b></p>
                 </div>
@@ -161,7 +161,7 @@
             <div class="member-info">
               <div class="member-info-content">
                 <h4>Web Development</h4>
-                <span>Full Stack Web Development</span>
+                <span>Full Stack Web Development</span><br>
                 <div class="price">
                   <p>Price <del>&#x20b9; 9500/-</del><b>&#x20b9;9500/-</b></p>
                 </div>
@@ -758,9 +758,7 @@
         <!-- Content -->
         <h5 class="text-uppercase font-weight-bold">Botnet Security</h5>
         <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-        <p>Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit amet,
-          consectetur
-          adipisicing elit.</p>
+        <p>Botnet Security is a Crowd Community ~ India's Best Cyber Security Community. Our aim to provide the right resources to everyone and educate them.</p>
 
       </div>
       <!-- Grid column -->
