--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           </li>
           <li><a href="#academy">Academy</a></li>
           <li><a href="#services">Services</a></li>
-          <li><a href="#footer">Contact Us</a></li>
+          <li><a href="/contact.html">Contact Us</a></li>
         </ul>
       </nav><!-- .main-nav-->
     </div>
@@ -433,7 +433,7 @@
             <p class="cta-text">We care about your security and wants to build your career in Cyber Security with real world examples.</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle" href="#">Get Started</a>
+            <a class="cta-btn align-middle" href="/contact.html">Get Started</a>
           </div>
         </div>
 
