--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
             <p class="cta-text">We care about your security and wants to build your career in Cyber Security with real world examples.</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle" href="contact.html">Get Started</a>
+            <a class="cta-btn align-middle" href="BotnetIn/contact.html">Get Started</a>
           </div>
         </div>
 
