--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           </li>
           <li><a href="#academy">Academy</a></li>
           <li><a href="#services">Services</a></li>
-          <li><a href="/contact.html">Contact Us</a></li>
+          <li><a href="BotnetIn/contact.html">Contact Us</a></li>
         </ul>
       </nav><!-- .main-nav-->
     </div>
