--- a/404.html
+++ b/404.html
@@ -18,7 +18,7 @@
         </div>
         <div class="central-body">
             <img class="image-404" src="http://salehriaz.com/404Page/img/404.svg" width="150px">
-            <a href="http://salehriaz.com/404Page/404.html" class="btn-go-home" href="index.html">GO BACK HOME</a>
+            <a class="btn-go-home" href="index.html">GO BACK HOME</a>
             
         </div>
         <div class="objects">
