--- a/404.html
+++ b/404.html
@@ -17,18 +17,18 @@
             
         </div>
         <div class="central-body">
-            <img class="image-404" src="http://salehriaz.com/404Page/img/404.svg" width="150px">
+            <img class="image-404" src="assets/img/404.svg" width="150px">
             <a class="btn-go-home" href="index.html">GO BACK HOME</a>
             
         </div>
         <div class="objects">
-            <img class="object_rocket" src="http://salehriaz.com/404Page/img/rocket.svg" width="100px">
+            <img class="object_rocket" src="assets/img/rocket.svg" width="100px">
             <div class="earth-moon">
-                <img class="object_earth" src="http://salehriaz.com/404Page/img/earth.svg" width="30px">
-                <img class="object_moon" src="http://salehriaz.com/404Page/img/moon.svg" width="80px">
+                <img class="object_earth" src="assets/img/earth.svg" width="30px">
+                <img class="object_moon" src="assets/img/moon.svg" width="80px">
             </div>
             <div class="box_astronaut">
-                <img class="object_astronaut" src="http://salehriaz.com/404Page/img/astronaut.svg" width="70px">
+                <img class="object_astronaut" src="assets/img/astronaut.svg" width="70px">
             </div>
         </div>
         <div class="glowing_stars">
