--- a/404.html
+++ b/404.html
@@ -2,8 +2,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page not found - error404</title>
+    <title>Page not found | error404</title>
     <link rel="stylesheet" href="assets/css/pages.css">
+
+     <!-- Favicon -->
+  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/favicon.png" rel="Botnet Security">
 </head>
 <body>
   
