--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
   <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
   <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link rel="stylesheet" href="assets/css/pages.css">
+  
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
@@ -45,29 +45,31 @@
   </div>
 
   <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top header-transparent">
-    <div class="container d-flex align-items-center">
+ <!-- ======= Header ======= -->
+ <header id="header" class="fixed-top header-transparent">
+  <div class="container d-flex align-items-center">
 
-      <h1 class="logo mr-auto"><a href="index.html"><img src="assets/img/botnetfinallogo.png" alt="Botnet Security" class="img-fluid"></a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+    <h1 class="logo mr-auto"><a href="index.html"><img src="assets/img/botnetfinallogo.png" alt="Botnet Security" class="img-fluid"></a></h1>
+    <!-- Uncomment below if you prefer to use an image logo -->
+    <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
-      <nav class="main-nav d-none d-lg-block">
-        <ul>
-          <li class="active"><a href="index.html">Home</a></li>
-          <li class="drop-down"><a href="#">About</a>
-            <ul>
-              <li><a href="#about">About Us</a></li>
-              <li><a href="">Our Team</a></li>             
-            </ul>
-          </li>
-          <li><a href="#academy">Academy</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#footer">Contact Us</a></li>
-        </ul>
-      </nav><!-- .main-nav-->
-    </div>
-  </header>
+    <nav class="main-nav d-none d-lg-block">
+      <ul>
+        <li class="active"><a href="index.html">Home</a></li>
+        <li class="drop-down"><a href="#">About</a>
+          <ul>
+            <li><a href="#about">About Us</a></li>
+            <li><a href="">Our Team</a></li>             
+          </ul>
+        </li>
+        <li><a href="#academy">Academy</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+      </ul>
+    </nav><!-- .main-nav-->
+  </div>
+</header><!-- End Header -->
+
  
 <!-- ======= Hero Section ======= -->
 <section id="hero" class="clearfix">
