adding padding in contact page

--- a/contact.html
+++ b/contact.html
@@ -72,19 +72,19 @@
 
  
 <!-- ======= Hero Section ======= -->
-<section id="hero" class="clearfix">
+<section id="hero" class="clearfix" style="background: none;">
     <div class="container d-flex h-100">
       <div class="row justify-content-center align-self-center" data-aos="fade-up">
         <div class="col-md-6 intro-info order-md-first order-last" data-aos="zoom-in" data-aos-delay="100">
             <br>
-            <h2><span>Get in Touch with us.</span><br></h2>
+            <h2><span>Get in Touch With Us.</span><br></h2>
           <div>
             <a href="#academy" class="btn-get-started scrollto">Contact Us</a>           
           </div>          
         </div>
         
         <div class="col-md-6 intro-img order-md-last order-first" data-aos="zoom-out" data-aos-delay="200"><br><br>
-          <img src="assets/img/contact-us.jpg" alt="Botnet" class="img-fluid">
+          <img src="assets/img/Get-in-touch.gif" alt="Botnet" style="width: 480px; " class="img-fluid">
           
         </div>
       </div>      
