--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
       <nav class="main-nav d-none d-lg-block">
         <ul>
           <li class="active"><a href="index.html">Home</a></li>
-          <li class="drop-down"><a href="#">About</a>
+          <li class="drop-down"><a href="#" >About</a>
             <ul>
-              <li><a href="#about">About Us</a></li>
-              <li><a href="">Our Team</a></li>             
+              <li><a href="index.html/#about">About Us</a></li>
+              <!-- <li><a href="#">Our Team</a></li> -->             
             </ul>
           </li>
-          <li><a href="#academy">Academy</a></li>
-          <li><a href="#services">Services</a></li>
+          <li><a href="index.html/#academy">Academy</a></li>
+          <li><a href="index.html/#services">Services</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
       </nav><!-- .main-nav-->
