--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
           <li class="active"><a href="index.html">Home</a></li>
           <li class="drop-down"><a href="#" >About</a>
             <ul>
-              <li><a href="index.html/#about">About Us</a></li>
+              <li><a href="index.html#about">About Us</a></li>
               <!-- <li><a href="#">Our Team</a></li> -->             
             </ul>
           </li>
-          <li><a href="index.html/#academy">Academy</a></li>
-          <li><a href="index.html/#services">Services</a></li>
+          <li><a href="index.html#academy">Academy</a></li>
+          <li><a href="index.html#services">Services</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
       </nav><!-- .main-nav-->
