change menu link

--- a/contact.html
+++ b/contact.html
@@ -58,12 +58,12 @@
         <li class="active"><a href="index.html">Home</a></li>
         <li class="drop-down"><a href="#">About</a>
           <ul>
-            <li><a href="#about">About Us</a></li>
-            <li><a href="">Our Team</a></li>             
+            <li><a href="index.html#about">About Us</a></li>
+            <!--<li><a href="">Our Team</a></li> -->             
           </ul>
         </li>
-        <li><a href="#academy">Academy</a></li>
-        <li><a href="#services">Services</a></li>
+        <li><a href="index.html#academy">Academy</a></li>
+        <li><a href="index.html#services">Services</a></li>
         <li><a href="contact.html">Contact Us</a></li>
       </ul>
     </nav><!-- .main-nav-->
@@ -79,7 +79,7 @@
             <br>
             <h2><span>Get in Touch With Us.</span><br></h2>
           <div>
-            <a href="#academy" class="btn-get-started scrollto">Contact Us</a>           
+            <a href="contact.html#academy" class="btn-get-started scrollto">Contact Us</a>           
           </div>          
         </div>
         
