--- a/index.html
+++ b/index.html
@@ -782,16 +782,16 @@
         <h5 class="text-uppercase font-weight-bold">Useful links</h5>
         <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
         <p>
-          <a href="#!">Your Account</a>
+          <a href="#">Our Academy</a>
         </p>
         <p>
-          <a href="#!">Become an Affiliate</a>
+          <a href="index.html#services">Our Services</a>
         </p>
         <p>
-          <a href="#!">Shipping Rates</a>
+          <a href="privacy-policy.html">Privacy Policy</a>
         </p>
         <p>
-          <a href="#!">Help</a>
+          <a href="terms-conditions.html">Terms & Conditions</a>
         </p>
 
       </div>
@@ -823,7 +823,7 @@
 
   <!-- Copyright -->
   <div class="footer-copyright text-center py-3">© 2020 Copyright:
-    <a href="#home"> BotnetSecurity</a>
+    <a href="index.html"> BotnetSecurity</a>
   </div>
   <!-- Copyright -->
 
