--- a/contact.html
+++ b/contact.html
@@ -206,16 +206,16 @@
           <h5 class="text-uppercase font-weight-bold">Useful links</h5>
           <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
           <p>
-            <a href="#!">Your Account</a>
+            <a href="#">Our Academy</a>
           </p>
           <p>
-            <a href="#!">Become an Affiliate</a>
+            <a href="index.html#services">Our Services</a>
           </p>
           <p>
-            <a href="#!">Shipping Rates</a>
+            <a href="privacy-policy.html">Privacy Policy</a>
           </p>
           <p>
-            <a href="#!">Help</a>
+            <a href="terms-conditions.html">Terms & Conditions</a>
           </p>
   
         </div>
